--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,11 @@
     "noEmit": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "strict": true
+    "strict": true,
+    // "noImplicitAny" : false
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/types"
+    ]
   }
 }
