--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-screens": "~2.15.2",
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "^11.3.2",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
